# dsan-5400-final-project

./: CHANGELOG.md  LICENSE  Procfile  README.md  app.py  er_visualization.py  introduction.qmd  logging.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/5400_final_prj/: __init__.py
src/final_prj_5400/: __init__.py  final_prj_5400.py  ner.py
static/css/: style.css
static/js/: app.js  graph.js
templates/: graph.html  index.html
tests/: test_1.py  test_5400_final_prj.py  test_app.py  test_ner.py
