[tool.poetry]
name = "final_prj_5400"
version = "0.0.0"
description = "This project contains research and implementation of NLP"
authors = ["Isfar Baset, Liz Kovalchuk, and Xinyue Zhang"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "final_prj_5400", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
newsapi-python = "^0.2.6"
spacy = "^3.6.0"

[tool.poetry.scripts]
download-spacy-model = "spacy.cli:download"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^6.0.0"
sphinx = "^7.0"
myst-nb = "^1.1.2"
sphinx-autoapi = "^3.0.0"
sphinx_rtd_theme = "^1.2.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
